[gd_scene load_steps=11 format=3 uid="uid://48t4n1rhpfyp"]

[ext_resource type="Script" path="res://scenes/led/Led.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dge3rh3kasi8" path="res://scenes/led/sensor_off.svg" id="2"]
[ext_resource type="Texture2D" uid="uid://c7rrorscxkw8h" path="res://scenes/led/sensor_green.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://cig0d483l3xee" path="res://scenes/led/sensor_yellow.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://cquxhwspn82of" path="res://scenes/led/sensor_red.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://davxlvnumpic8" path="res://scenes/led/sensor_blue.svg" id="6"]
[ext_resource type="FontVariation" uid="uid://d3v63v7uwyrmc" path="res://scenes/led/fontCourier.tres" id="7_na1kl"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": false,
"name": &"blue",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": false,
"name": &"green",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": false,
"name": &"red",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": false,
"name": &"white",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": false,
"name": &"yellow",
"speed": 1.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_kermp"]
font_size = 21
font_color = Color(0, 0, 0, 1)
outline_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_m7j7y"]
font_size = 21
font_color = Color(0, 0, 0, 1)
outline_size = 1

[node name="Led" type="Node2D"]
script = ExtResource("1")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(25, 25)
sprite_frames = SubResource("1")
animation = &"white"
frame_progress = 1.0

[node name="labTag" type="Label" parent="."]
offset_left = 51.0
offset_right = 129.0
offset_bottom = 25.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("7_na1kl")
theme_override_font_sizes/font_size = 21
text = "I123.4"
label_settings = SubResource("LabelSettings_kermp")
vertical_alignment = 1
uppercase = true

[node name="labOpis" type="Label" parent="."]
offset_left = 51.0
offset_top = 22.0
offset_right = 129.0
offset_bottom = 47.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("7_na1kl")
theme_override_font_sizes/font_size = 21
text = "Opis"
label_settings = SubResource("LabelSettings_m7j7y")
vertical_alignment = 1
